--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,139 @@
-torch==1.11.0
-torchvision==0.12.0
-ninja==1.10.2
-tqdm
+anyio==4.12.1
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+arrow==1.4.0
+asttokens==3.0.1
+async-lru==2.0.5
+attrs==25.4.0
+babel==2.17.0
+beautifulsoup4==4.14.3
+bleach==6.3.0
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+comm==0.2.3
+debugpy==1.8.19
+decorator==5.2.1
+defusedxml==0.7.1
+dominate==2.9.1
+exceptiongroup==1.3.1
+executing==2.2.1
+fastjsonschema==2.21.2
+filelock==3.20.0
+fqdn==1.5.1
+fsspec==2025.12.0
+gdown==5.2.0
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.2.4
+idna==3.11
 imageio==2.9.0
-imageio-ffmpeg
-mrcfile
-psutil
-tensorboardX==2.5
-pyspng
-opencv-python
-click
-scipy
-pyyaml
-yacs
-timm
-termcolor
-mtcnn
-tensorflow==2.2.1
-kornia
-dominate
-scikit-image
-trimesh
-numpy
+imageio-ffmpeg==0.6.0
+ipykernel==7.1.0
+ipython==8.38.0
+ipywidgets==8.1.8
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.3
+json5==0.13.0
+jsonpointer==3.0.0
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.3.0
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+jupyter_server==2.17.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.5.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.28.0
+jupyterlab_widgets==3.0.16
+kornia==0.8.1
+kornia_rs==0.1.10
+lark==1.3.1
+lazy_loader==0.4
+lz4==4.4.5
+MarkupSafe==3.0.2
+matplotlib-inline==0.2.1
+mistune==3.2.0
+mpmath==1.3.0
+mrcfile==1.5.4
+nbclient==0.10.4
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.10.2
+notebook==7.5.1
+notebook_shim==0.2.4
+numpy==1.26.4
+opencv-python==4.10.0.84
+overrides==7.7.0
+packaging==25.0
+pandocfilters==1.5.1
+parso==0.8.5
+pillow==10.2.0
+platformdirs==4.5.1
+prometheus_client==0.23.1
+prompt_toolkit==3.0.52
 protobuf==3.20.3
+psutil==7.2.1
+pure_eval==0.2.3
+pycparser==2.23
+Pygments==2.19.2
+PySocks==1.7.1
+pyspng==0.1.4
+python-dateutil==2.9.0.post0
+python-json-logger==4.0.0
+PyWavelets==1.8.0
+pywinpty==3.0.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+referencing==0.37.0
+requests==2.32.5
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
+rpds-py==0.30.0
+safetensors==0.7.0
+scikit-image==0.20.0
+scipy==1.15.3
+Send2Trash==2.0.0
+shellingham==1.5.4
+six==1.17.0
+soupsieve==2.8.1
+stack-data==0.6.3
+sympy==1.14.0
+tensorboardX==2.5
+termcolor==3.3.0
+terminado==0.18.1
+tifffile==2025.5.10
+timm==1.0.24
+tinycss2==1.4.0
+tomli==2.3.0
+torch==2.11.0.dev20260109+cu128
+torchaudio==2.11.0.dev20260109+cu128
+torchvision==0.25.0.dev20260108+cu128
+tornado==6.5.4
+tqdm==4.67.1
+traitlets==5.14.3
+trimesh==4.11.0
+typer-slim==0.21.1
+typing_extensions==4.15.0
+tzdata==2025.3
+uri-template==1.3.0
+urllib3==2.6.3
+wcwidth==0.2.14
+webcolors==25.10.0
+webencodings==0.5.1
+websocket-client==1.9.0
+widgetsnbextension==4.0.15
+yacs==0.1.8
