--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ checkpoints/
 checkpoints/
 outputs/
 results/
+
+out/
+BROWS_EDITING.md
+TESTING_GUIDE.md
+MULTI_ATTRIBUTE_EDITING.md
+
 *.pkl
 *.pt
 *.pth
